# support-step-recorder

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/ssr-core/: Cargo.toml
crates/ssr-core/examples/: probe.rs  shot.rs
crates/ssr-core/src/: capture.rs  capture_macos.rs  capture_windows.rs  export.rs  i18n.rs  lib.rs  model.rs  progress.rs  recorder.rs  screencast.rs  session.rs  text.rs  writer.rs
crates/ssr-core/src/input/: devicequery.rs  evdev_backend.rs  mod.rs
crates/ssr-core/tests/: session.rs
crates/ssr-gui/: Cargo.toml
crates/ssr-gui/src/: main.rs
packaging/: 60-ssr-input.rules  install-linux.sh
